@@ -1,0 +1,6 @@
+% for error in field.get_errors():
+  <div class="text-error">
+    <i class="icon-exclamation-sign"></i>
+    ${_(error)}
+  </div>
+% endfor
