@@ -1,0 +1,6 @@
+% if field.help is not None:
+<div class="text-help">
+  <i class="icon-info-sign"></i>
+  ${_(field.help)}
+</div>
+% endif
